@@ -1,55 +1,27 @@
+/*
+ * Decompiled with CFR 0.152.
+ */
 package dev.langchain4j.rag.content.injector;
-
-import static dev.langchain4j.internal.Utils.copy;
-import static dev.langchain4j.internal.Utils.getOrDefault;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotEmpty;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
-import static java.util.stream.Collectors.joining;
 
 import dev.langchain4j.data.document.Metadata;
 import dev.langchain4j.data.message.ChatMessage;
 import dev.langchain4j.data.message.TextContent;
 import dev.langchain4j.data.message.UserMessage;
 import dev.langchain4j.data.segment.TextSegment;
+import dev.langchain4j.internal.Utils;
+import dev.langchain4j.internal.ValidationUtils;
 import dev.langchain4j.model.input.Prompt;
 import dev.langchain4j.model.input.PromptTemplate;
 import dev.langchain4j.rag.content.Content;
+import dev.langchain4j.rag.content.injector.ContentInjector;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
-/**
- * Default implementation of {@link ContentInjector} intended to be suitable for the majority of use cases.
- * <br>
- * <br>
- * It's important to note that while efforts will be made to avoid breaking changes,
- * the default behavior of this class may be updated in the future if it's found
- * that the current behavior does not adequately serve the majority of use cases.
- * Such changes would be made to benefit both current and future users.
- * <br>
- * <br>
- * This implementation appends all given {@link Content}s to the end of the given {@link UserMessage}
- * in their order of iteration.
- * Refer to {@link #DEFAULT_PROMPT_TEMPLATE} and implementation for more details.
- * <br>
- * <br>
- * Configurable parameters (optional):
- * <br>
- * - {@link #promptTemplate}: The prompt template that defines how the original {@code userMessage}
- * and {@code contents} are combined into the resulting {@link UserMessage}.
- * The text of the template should contain the {@code {{userMessage}}} and {@code {{contents}}} variables.
- * <br>
- * - {@link #metadataKeysToInclude}: A list of {@link Metadata} keys that should be included
- * with each {@link Content#textSegment()}.
- */
-public class DefaultContentInjector implements ContentInjector {
-
-    public static final PromptTemplate DEFAULT_PROMPT_TEMPLATE = PromptTemplate.from(
-            "{{userMessage}}\n" +
-            "\n" +
-            "Answer using the following information:\n" +
-            "{{contents}}");
-
+public class DefaultContentInjector
+implements ContentInjector {
+    public static final PromptTemplate DEFAULT_PROMPT_TEMPLATE = PromptTemplate.from("{{userMessage}}\n\nAnswer using the following information:\n{{contents}}");
     private final PromptTemplate promptTemplate;
     private final List<String> metadataKeysToInclude;
 
@@ -58,16 +30,16 @@ public class DefaultContentInjector implements ContentInjector {
     }
 
     public DefaultContentInjector(List<String> metadataKeysToInclude) {
-        this(DEFAULT_PROMPT_TEMPLATE, ensureNotEmpty(metadataKeysToInclude, "metadataKeysToInclude"));
+        this(DEFAULT_PROMPT_TEMPLATE, ValidationUtils.ensureNotEmpty(metadataKeysToInclude, "metadataKeysToInclude"));
     }
 
     public DefaultContentInjector(PromptTemplate promptTemplate) {
-        this(ensureNotNull(promptTemplate, "promptTemplate"), null);
+        this(ValidationUtils.ensureNotNull(promptTemplate, "promptTemplate"), null);
     }
 
     public DefaultContentInjector(PromptTemplate promptTemplate, List<String> metadataKeysToInclude) {
-        this.promptTemplate = getOrDefault(promptTemplate, DEFAULT_PROMPT_TEMPLATE);
-        this.metadataKeysToInclude = copy(metadataKeysToInclude);
+        this.promptTemplate = Utils.getOrDefault(promptTemplate, DEFAULT_PROMPT_TEMPLATE);
+        this.metadataKeysToInclude = Utils.copy(metadataKeysToInclude);
     }
 
     public static DefaultContentInjectorBuilder builder() {
@@ -79,68 +51,58 @@ public class DefaultContentInjector implements ContentInjector {
         if (contents.isEmpty()) {
             return chatMessage;
         }
-
-        Prompt prompt = createPrompt(chatMessage, contents);
+        Prompt prompt = this.createPrompt(chatMessage, contents);
         if (chatMessage instanceof UserMessage) {
-            return ((UserMessage) chatMessage).toBuilder()
-                    .contents(List.of(TextContent.from(prompt.text())))
-                    .build();
-        } else {
-            return prompt.toUserMessage();
+            UserMessage userMessage = (UserMessage)chatMessage;
+            return userMessage.toBuilder().contents(Collections.singletonList(TextContent.from(prompt.text()))).build();
         }
+        return prompt.toUserMessage();
     }
 
     protected Prompt createPrompt(ChatMessage chatMessage, List<Content> contents) {
-        Map<String, Object> variables = new HashMap<>();
-        variables.put("userMessage", ((UserMessage) chatMessage).singleText());
-        variables.put("contents", format(contents));
-        return promptTemplate.apply(variables);
+        HashMap<String, Object> variables = new HashMap<String, Object>();
+        variables.put("userMessage", ((UserMessage)chatMessage).singleText());
+        variables.put("contents", this.format(contents));
+        return this.promptTemplate.apply(variables);
     }
 
     protected String format(List<Content> contents) {
-        return contents.stream().map(this::format).collect(joining("\n\n"));
+        return contents.stream().map(this::format).collect(Collectors.joining("\n\n"));
     }
 
     protected String format(Content content) {
-
         TextSegment segment = content.textSegment();
-
-        if (metadataKeysToInclude.isEmpty()) {
+        if (this.metadataKeysToInclude.isEmpty()) {
             return segment.text();
         }
-
         String segmentContent = segment.text();
-        String segmentMetadata = format(segment.metadata());
-
-        return format(segmentContent, segmentMetadata);
+        String segmentMetadata = this.format(segment.metadata());
+        return this.format(segmentContent, segmentMetadata);
     }
 
     protected String format(Metadata metadata) {
         StringBuilder formattedMetadata = new StringBuilder();
-        for (String metadataKey : metadataKeysToInclude) {
+        for (String metadataKey : this.metadataKeysToInclude) {
             String metadataValue = metadata.getString(metadataKey);
-            if (metadataValue != null) {
-                if (!formattedMetadata.isEmpty()) {
-                    formattedMetadata.append("\n");
-                }
-                formattedMetadata.append(metadataKey).append(": ").append(metadataValue);
+            if (metadataValue == null) continue;
+            if (formattedMetadata.length() != 0) {
+                formattedMetadata.append("\n");
             }
+            formattedMetadata.append(metadataKey).append(": ").append(metadataValue);
         }
         return formattedMetadata.toString();
     }
 
     protected String format(String segmentContent, String segmentMetadata) {
-        return segmentMetadata.isEmpty()
-                ? segmentContent
-                : String.format("content: %s\n%s", segmentContent, segmentMetadata);
+        return segmentMetadata.isEmpty() ? segmentContent : String.format("content: %s\n%s", segmentContent, segmentMetadata);
     }
 
     public static class DefaultContentInjectorBuilder {
-
         private PromptTemplate promptTemplate;
         private List<String> metadataKeysToInclude;
 
-        DefaultContentInjectorBuilder() {}
+        DefaultContentInjectorBuilder() {
+        }
 
         public DefaultContentInjectorBuilder promptTemplate(PromptTemplate promptTemplate) {
             this.promptTemplate = promptTemplate;
@@ -157,3 +119,4 @@ public class DefaultContentInjector implements ContentInjector {
         }
     }
 }
+
